test/files/pos/t2764/Ann.java
package bippy;

public @interface Ann {
  Enum value();
}
