test/files/neg/java-annotation-bad/Ann_0.java
package ann;

public @interface Ann_0 {
    N[] value();

    public @interface N {}
}